2010-11-21  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Merged from trunk. Added a parameter of
	unsafe_chars, '<>&', to encode_entities(). It is support for multibyte
	characters. If it is not defined, records with multibyte characters
	on database are destroyed by 'pandora_recode_db.pl'. :(

2010-11-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. Fixed regexp alerts. The
	  patch to detect malformed regular expressions made them malfunction.

2010-11-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. Decode HTML entities in
	  macros.

2010-11-11  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control
	DEBIAN/make_deb_package.sh: Updates on DEB packaging.

2010-11-11  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Tools.pm: Added missed functions
	to recode script

2010-11-11  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm
	util/pandora_recode_db.pl: Added the recode script
	to the 3.1.1 version

2010-11-08  Sergio Martin <srgio.martin@artica.es>

	* util/pandora_sync_db.pl: Added two special 
	synchronization cases

2010-11-08  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Fixed array pass

2010-11-08  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed prototypes for a function.

2010-11-08  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Changed from DELETE to
	TRUNCATE in empty tables operation

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Changed the tevento table
	synchronization to sync it only when the flag sync_data 
	is 1. Merged from trunk

2010-11-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Fixed prototypes for
	  pandora_query_tcp and pandora_query_snmp.

2010-11-05  Sancho Lerena <slerena@artica.es>

	* Makefile.PL: Now install libs on the same place that RPM
