@@ -1,3 +1,7 @@
+2010-12-22  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_recode_db.pl: Merged from trunk.
+
 2010-11-21  Junichi Satoh  <junichi@rworks.jp>
 
 	* lib/PandoraFMS/Tools.pm: Merged from trunk. Added a parameter of
